A bundle of changes to start things off; CMIP6, CMIP5, CMIP3 pages plus a sidebar layout and images. Updates to the index page too

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
+title: WGCM Infrastructure Panel
+logo: https://www.wcrp-climate.org/images/community-resources/WCRP_logo_original-150.png
+description: The WGCM Infrastructure Panel (WIP) coordinates the infrastructure supporting CMIP
