--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-minimal
 title: WGCM Infrastructure Panel
 logo: https://www.wcrp-climate.org/images/community-resources/WCRP_logo_original-150.png
 description: The WGCM Infrastructure Panel (WIP) coordinates the infrastructure supporting CMIP
+url: https://wcrp-cmip.github.io/WGCM_Infrastructure_Panel/
+
